packages/arte-odyssey/src/styles/index.css
/* ... */
.dark {
  --fg-base: var(--gray-50);
  --fg-subtle: var(--gray-500);
  --fg-mute: var(--gray-300);
  --fg-inverse: var(--gray-900);
  --fg-info: var(--blue-200);
  --fg-success: var(--green-200);
  --fg-warning: var(--yellow-200);
  --fg-error: var(--red-200);

  --bg-base: var(--gray-900);
  --bg-subtle: var(--gray-800);
  --bg-mute: var(--gray-700);
  --bg-emphasize: var(--gray-600);
  --bg-inverse: var(--white);
  --bg-info: var(--blue-900);
  --bg-success: var(--green-900);
  --bg-warning: var(--yellow-900);
  --bg-error: var(--red-900);

  --border-base: var(--gray-600);
  --border-subtle: var(--gray-800);
  --border-mute: var(--gray-700);
  --border-emphasize: var(--gray-500);
  --border-inverse: var(--gray-300);
  --border-info: var(--blue-400);
  --border-success: var(--green-400);
  --border-warning: var(--yellow-400);
  --border-error: var(--red-400);

  --primary-fg: var(--teal-100);
  --primary-bg: var(--teal-800);
  --primary-bg-subtle: var(--teal-900);
  --primary-bg-mute: var(--teal-800);
  --primary-bg-emphasize: var(--teal-700);
  --primary-border: var(--teal-500);

  --secondary-fg: var(--cyan-100);
  --secondary-bg: var(--cyan-800);
  --secondary-bg-subtle: var(--cyan-900);
  --secondary-bg-mute: var(--cyan-800);
  --secondary-bg-emphasize: var(--cyan-700);
  --secondary-border: var(--cyan-500);

  /* TODO: 上の変数の一環として使えるようにする */
  --group-primary: var(--teal-200);
  --group-secondary: var(--cyan-200);
  --group-tertiary: var(--pink-200);
  --group-quaternary: var(--purple-200);
}

@theme inline {
  --color-*: initial;
  --color-fg-base: var(--fg-base);
  --color-fg-subtle: var(--fg-subtle);
  --color-fg-mute: var(--fg-mute);
  --color-fg-inverse: var(--fg-inverse);
  --color-fg-info: var(--fg-info);
  --color-fg-success: var(--fg-success);
  --color-fg-warning: var(--fg-warning);
  --color-fg-error: var(--fg-error);

  --color-bg-base: var(--bg-base);
  --color-bg-subtle: var(--bg-subtle);
  --color-bg-mute: var(--bg-mute);
  --color-bg-emphasize: var(--bg-emphasize);
  --color-bg-inverse: var(--bg-inverse);
  --color-bg-info: var(--bg-info);
  --color-bg-success: var(--bg-success);
  --color-bg-warning: var(--bg-warning);
  --color-bg-error: var(--bg-error);

  --color-border-base: var(--border-base);
  --color-border-subtle: var(--border-subtle);
  --color-border-mute: var(--border-mute);
  --color-border-emphasize: var(--border-emphasize);
  --color-border-inverse: var(--border-inverse);
  --color-border-info: var(--border-info);
  --color-border-success: var(--border-success);
  --color-border-warning: var(--border-warning);
  --color-border-error: var(--border-error);

  --color-primary-fg: var(--primary-fg);
  --color-primary-bg: var(--primary-bg);
  --color-primary-bg-subtle: var(--primary-bg-subtle);
  --color-primary-bg-mute: var(--primary-bg-mute);
  --color-primary-bg-emphasize: var(--primary-bg-emphasize);
  --color-primary-border: var(--primary-border);

  --color-secondary-fg: var(--secondary-fg);
  --color-secondary-bg: var(--secondary-bg);
  --color-secondary-bg-subtle: var(--secondary-bg-subtle);
  --color-secondary-bg-mute: var(--secondary-bg-mute);
  --color-secondary-bg-emphasize: var(--secondary-bg-emphasize);
  --color-secondary-border: var(--secondary-border);

  --color-transparent: transparent;
  --color-back-drop: var(--back-drop);

  /* group */
  --color-group-primary: var(--group-primary);
  --color-group-secondary: var(--group-secondary);
  --color-group-tertiary: var(--group-tertiary);
  --color-group-quaternary: var(--group-quaternary);

  --radius-*: initial;
  --radius-sm: 0.375rem;
  --radius-md: 0.5rem;
  --radius-lg: 0.75rem;
  --radius-xl: 1rem;
  --radius-2xl: 1.25rem;

  --font-*: initial;
  --font-noto-sans-jp: var(--font-noto-sans-jp);
  --font-m-plus-2: var(--font-m-plus-2);

  --text-*: initial;
  --text-xs: 0.75rem;
  --text-xs--line-height: calc(1 / 0.75);
  --text-sm: 0.875rem;
  --text-sm--line-height: calc(1.25 / 0.875);
  --text-md: 1rem;
  --text-md--line-height: calc(1.5 / 1);
  --text-lg: 1.125rem;
  --text-lg--line-height: calc(1.75 / 1.125);
  --text-xl: 1.25rem;
  --text-xl--line-height: calc(1.75 / 1.25);
  --text-2xl: 1.5rem;
  --text-2xl--line-height: calc(2 / 1.5);
  --text-3xl: 1.875rem;
  --text-3xl--line-height: calc(2.25 / 1.875);
  --text-emphasize: 3rem;
  --text-emphasize--line-height: 1;
  --text-highlight: 6rem;
  --text-highlight--line-height: 1;

  --font-weight-*: initial;
  --font-weight-medium: 450;
  --font-weight-bold: 700;

  --tracking-*: initial;
  --tracking-none: 0em;
  --tracking-normal: 0.025em;

  --leading-*: initial;
  --leading-none: 1;
  --leading-tight: 1.25;
  --leading-snug: 1.375;
  --leading-normal: 1.5;
  --leading-relaxed: 1.625;
  --leading-loose: 2;

  --shadow-*: initial;
  --shadow-2xs: 0 1px rgb(0 0 0 / 0.05);
  --shadow-xs: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  --shadow-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
  --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
  --shadow-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  --shadow-2xl: 0 25px 50px -12px rgb(0 0 0 / 0.25);

  --inset-shadow-*: initial;
  --inset-shadow-2xs: inset 0 1px rgb(0 0 0 / 0.05);
  --inset-shadow-xs: inset 0 1px 1px rgb(0 0 0 / 0.05);
  --inset-shadow-sm: inset 0 2px 4px rgb(0 0 0 / 0.05);

  --spacing: 0.25rem;

  --breakpoint-*: initial;
  --breakpoint-sm: 40rem;
  --breakpoint-md: 48rem;
  --breakpoint-lg: 64rem;
  --breakpoint-xl: 80rem;
  --breakpoint-2xl: 96rem;
}

@utility grid-cols-auto-fill-* {
  grid-template-columns: repeat(
    auto-fill,
    minmax(min(calc(var(--spacing) * --value(integer)), 100%), 1fr)
  );
}

@utility grid-cols-auto-fit-* {
  grid-template-columns: repeat(
    auto-fit,
    minmax(min(calc(var(--spacing) * --value(integer)), 100%), 1fr)
  );
}
/* ... */

